Add buzzer support

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,6 @@
 [config]
 debug=1 ; Debug
-gpio_warning_light=7 ; Gpio output (not the position of the pin)
+gpio_warning_light=17 ; Gpio output for the warning light driven by the relay (not the position of the pin)
+gpio_buzzer=27; Gpio output for the buzzer (not the position of the pin)
 credential=foo ; Your bamboo access : base64_encode("login:passwd")
 test_url=https://bamboo.your-corp.net/rest/api/latest/result/YOUR-PLAN ; test url
