We can call a bash script when a buil failed or success

--- a/config.dist.ini
+++ b/config.dist.ini
@@ -4,3 +4,5 @@ gpio_warning_light=17 ; Gpio output for the warning light driven by the relay (n
 gpio_buzzer=27; Gpio output for the buzzer (not the position of the pin)
 credential=foo ; Your bamboo access : base64_encode("login:passwd")
 test_url=https://bamboo.your-corp.net/rest/api/latest/result/YOUR-PLAN ; test url
+bash_success=false ; Bash script executed when a build succed. Set to false to disable it
+bash_fail=false ; Bash script executed when a build failed. Set to false to disable it
